# sonnenstund

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  package.ipynb  prototype.ipynb  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yaml  tests.yaml
sonnenstund/data/: __init__.py  dataprovider.py
sonnenstund/data/providers/: geosphereaustria.py
sonnenstund/docs/: TODO
sonnenstund/json/geosphere-austria/: openapi.json
sonnenstund/models/: quality.py
sonnenstund/models/austria/: geosphere_parameters.py
sonnenstund/models/geosphereaustria/: model.py
sonnenstund/tests/test_data/test_providers/: test_geosphereaustria.py
tests/test_data/test_providers/: test_geosphereaustria.py
